rename video endpoint to videos

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
   <video id="videoPlayer" width="70%" controls autoplay muted="false">
-    <source src="/video/626380973" type="video/mp4" />
+    <source src="/videos/626380973" type="video/mp4" />
   </video>
 </body>
 
